--- a/about.html
+++ b/about.html
@@ -75,21 +75,120 @@
             </div>
         </section>
 
-        <section class="section frontpage-hero">
-            <div class="container-fluid p-0">
-                <div class="row g-0">
-                    <div class="col-lg-10">
+        <section class="section py-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8">
                         <p class="fz-15 fw-light mb-0">Профессиональный</p>
                         <h1 class="text-uppercase fw-bold mb-5">Веб-разработчик и надежный бизнес-партнер</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12">
                         <img class="w-100" src="img/about-01.png" alt="">
                     </div>
-                    <div class="col-lg-2">
-                        <div class="d-flex flex-column justify-content-center align-items-center h-100 pt-4 pt-lg-0">
-                            <p>236</p>
-                            <p>Разработано проектов</p>
-                            <p>9346</p>
-                            <p>Рабочих часов затрачено</p>
-                            <div class="bg-btn-hero bg-color-black"></div>
+                </div>
+            </div>
+        </section>
+
+        <section class="section py-5">
+            <div class="container-fluid">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 text-center">
+                        <h2 class="h1 fw-bold mb-5">Наша команда</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 col-lg-6">
+                        <div class="memoji-avatar d-flex align-items-center justify-content-center py-2">
+                            <img class="flex-shrink-0" src="img/about-memoji-01.png" alt="">
+                            <div class="ps-3">
+                                <p class="fz-15 fw-bold mb-0">Вождь</p>
+                                <p class="small">Алексей</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-6">
+                        <div class="memoji-avatar d-flex align-items-center justify-content-center py-3">
+                            <img class="flex-shrink-0" src="img/about-memoji-04.png" alt="">
+                            <div class="ps-3">
+                                <p class="fz-15 fw-bold mb-0">HR-директор</p>
+                                <p class="small">Юля</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="memoji-avatar d-flex align-items-center justify-content-center py-5">
+                            <img class="flex-shrink-0" src="img/about-memoji-02.png" alt="">
+                            <div class="ps-3">
+                                <p class="fz-15 fw-bold mb-0">Программист</p>
+                                <p class="small">Павел</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="memoji-avatar d-flex align-items-center justify-content-center py-2">
+                            <img class="flex-shrink-0" src="img/about-memoji-03.png" alt="">
+                            <div class="ps-3">
+                                <p class="fz-15 fw-bold mb-0">Дизайнер</p>
+                                <p class="small">Юля</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="memoji-avatar d-flex align-items-center justify-content-center py-3">
+                            <img class="flex-shrink-0" src="img/about-memoji-05.png" alt="">
+                            <div class="ps-3">
+                                <p class="fz-15 fw-bold mb-0">SEO-специалист</p>
+                                <p class="small">Александр</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-6">
+                        <div class="memoji-avatar d-flex align-items-center justify-content-center py-5">
+                            <img class="flex-shrink-0" src="img/about-memoji-06.png" alt="">
+                            <div class="ps-3">
+                                <p class="fz-15 fw-bold mb-0">Проектный менеджер</p>
+                                <p class="small">Денис</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-6">
+                        <div class="memoji-avatar d-flex align-items-center justify-content-center py-2">
+                            <img class="flex-shrink-0" src="img/about-memoji-07.png" alt="">
+                            <div class="ps-3">
+                                <p class="fz-15 fw-bold mb-0">Верстальщик</p>
+                                <p class="small">Андрей</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="memoji-avatar d-flex align-items-center justify-content-center py-3">
+                            <img class="flex-shrink-0" src="img/about-memoji-08.png" alt="">
+                            <div class="ps-3">
+                                <p class="fz-15 fw-bold mb-0">Контент-менеджер</p>
+                                <p class="small">Лада</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="memoji-avatar d-flex align-items-center justify-content-center py-4">
+                            <img class="flex-shrink-0" src="img/about-memoji-09.png" alt="">
+                            <div class="ps-3">
+                                <p class="fz-15 fw-bold mb-0">Менеджер по продажам</p>
+                                <p class="small">Дмитрий</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="memoji-avatar d-flex align-items-center justify-content-center py-5">
+                            <img class="flex-shrink-0" src="img/about-memoji-10.png" alt="">
+                            <div class="ps-3">
+                                <p class="fz-15 fw-bold mb-0">Менеджер по продажам</p>
+                                <p class="small">Виктор</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -98,9 +197,124 @@
 
         <section class="section py-5">
             <div class="container">
+                <div class="row justify-content-center mb-7">
+                    <div class="col-12 text-center">
+                        <h2 class="h1 fw-bold mb-5">Веб-студия Starsite занимается разработкой сайтов для России и зарубежных рынков с 2012 года </h2>
+                        <p class="fz-15 fw-light">Наша команда — более 20 сотрудников в разных странах и городах.<br>
+                            Понимание потребностей онлайн-бизнеса, опыт взаимодействия с тысячами клиентов, высокая квалификация персонала, собственные «ноу-хау» и  высокое качество по удивительно низким и «вкусным» ценам.</p>
+                    </div>
+                </div>
+                <div class="row g-4">
+                    <div class="col-12 text-center">
+                        <p class="h1 fw-bold mb-3">Только плюсы</p>
+                    </div>
+                    <div class="col-lg-6">
+                        <img class="w-100" src="img/about-line-graphik.png" alt="">
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="accordion accordion-advantage py-0 py-lg-5" id="advantage">
+                            <div class="accordion-item">
+                                <div class="accordion-header" id="advantage-heading-1">
+                                    <button class="accordion-button fz-15" type="button" data-bs-toggle="collapse" data-bs-target="#a1" aria-expanded="true" aria-controls="a1">
+                                        Готовые сайты & Интернет-магазины
+                                    </button>
+                                </div>
+                                <div id="a1" class="accordion-collapse collapse show" aria-labelledby="advantage-heading-1" data-bs-parent="#advantage">
+                                    <div class="accordion-body fw-light py-0">
+                                        <p>Разрабатываем сайты на готовых решениях для быстрого старта и с минимальным бюджетом</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="accordion-item">
+                                <div class="accordion-header" id="advantage-heading-2">
+                                    <button class="accordion-button collapsed fz-15" type="button" data-bs-toggle="collapse" data-bs-target="#a2" aria-expanded="false" aria-controls="a2">
+                                        Техническая поддерка & Интеграции
+                                    </button>
+                                </div>
+                                <div id="a2" class="accordion-collapse collapse" aria-labelledby="advantage-heading-2" data-bs-parent="#advantage">
+                                    <div class="accordion-body fw-light py-0">
+                                        <p>Разработка функционально сложных сайтов, интернет-магазинов. Интеграции с различнами системами</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="accordion-item">
+                                <div class="accordion-header" id="advantage-heading-3">
+                                    <button class="accordion-button collapsed fz-15" type="button" data-bs-toggle="collapse" data-bs-target="#a3" aria-expanded="false" aria-controls="a3">
+                                        SEO-продвижение & Контекстная реклама
+                                    </button>
+                                </div>
+                                <div id="a3" class="accordion-collapse collapse" aria-labelledby="advantage-heading-3" data-bs-parent="#advantage">
+                                    <div class="accordion-body fw-light py-0">
+                                        <p>Максимально быстро привлекаем целевую аудиторию и помошаем выйти на новый рынок</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="accordion-item">
+                                <div class="accordion-header" id="advantage-heading-4">
+                                    <button class="accordion-button collapsed fz-15" type="button" data-bs-toggle="collapse" data-bs-target="#a4" aria-expanded="false" aria-controls="a4">
+                                        Хостинг и домен
+                                    </button>
+                                </div>
+                                <div id="a4" class="accordion-collapse collapse" aria-labelledby="advantage-heading-4" data-bs-parent="#advantage">
+                                    <div class="accordion-body fw-light py-0">
+                                        <p>Максимально быстро привлекаем целевую аудиторию и помошаем выйти на новый рынок</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="section py-5 pb-7 dark-mode bg-color-black color-white">
+            <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-lg-8 text-center">
-                        <h2>Наша команда</h2>
+                    <div class="col-12 text-center">
+                        <p class="fz-15 fw-light mb-0">Есть мнение</p>
+                        <p class="h1 fw-bold mb-7">Нас описывают как профессиональную команду</p>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-lg-7">
+                        <div class="swiper testimonialSwiper">
+                            <div class="swiper-wrapper mb-5">
+                                <div class="swiper-slide">
+                                    <p class="fz-15">ОАО «Завод имени В.А. Дегтярева»</p>
+                                    <div style="color: #CDCFD0;">
+                                        <p>“ОАО «Завод имени В.А. Дегтярева» выражает искреннюю признательность и благодарность коллективу веб-студии «СтартСайт» за техническую поддержку и адаптацию каталога продукции сайта www.zid.ru на французский язык.”</p>
+                                    </div>
+                                    <div class="mt-5">
+                                        <p class="mb-2">В.Г. Мандельштам</p>
+                                        <p class="small fw-light">Начальник управления продаж продукции ОАО «ЗиД»</p>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <p class="fz-15">ОАО «Завод имени В.А. Дегтярева»</p>
+                                    <div style="color: #CDCFD0;">
+                                        <p>“ОАО «Завод имени В.А. Дегтярева» выражает искреннюю признательность и благодарность коллективу веб-студии «СтартСайт» за техническую поддержку и адаптацию каталога продукции сайта www.zid.ru на французский язык.”</p>
+                                    </div>
+                                    <div class="mt-5">
+                                        <p class="mb-2">В.Г. Мандельштам</p>
+                                        <p class="small fw-light">Начальник управления продаж продукции ОАО «ЗиД»</p>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <p class="fz-15">ОАО «Завод имени В.А. Дегтярева»</p>
+                                    <div style="color: #CDCFD0;">
+                                        <p>“ОАО «Завод имени В.А. Дегтярева» выражает искреннюю признательность и благодарность коллективу веб-студии «СтартСайт» за техническую поддержку и адаптацию каталога продукции сайта www.zid.ru на французский язык.”</p>
+                                    </div>
+                                    <div class="mt-5">
+                                        <p class="mb-2">В.Г. Мандельштам</p>
+                                        <p class="small fw-light">Начальник управления продаж продукции ОАО «ЗиД»</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-pagination"></div>
+                        </div>
                     </div>
                 </div>
             </div>
