--- a/cases.html
+++ b/cases.html
@@ -80,7 +80,7 @@
                 <h1 class="text-uppercase fw-bold mb-5">Реализованные проекты</h1>
                 <div class="row g-4 justify-content-between">
                     <div class="col-md-6 col-lg-5">
-                        <div class="card card-case py-4">
+                        <div class="card card-case py-3 py-lg-4">
                             <img class="card-img" src="img/case-01.png" alt="">
                             <div class="card-body">
                                 <p class="card-title fz-15 fw-bold"><a class="stretched-link text-decoration-none" href="cases-item.html">Дрова-шоп</a></p>
@@ -89,7 +89,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6">
-                        <div class="card card-case py-4">
+                        <div class="card card-case py-3 py-lg-4">
                             <img class="card-img" src="img/case-02.png" alt="">
                             <div class="card-body">
                                 <p class="card-title fz-15 fw-bold"><a class="stretched-link text-decoration-none" href="cases-item.html">Дрова-шоп</a></p>
@@ -98,7 +98,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6">
-                        <div class="card card-case py-4">
+                        <div class="card card-case py-3 py-lg-4">
                             <img class="card-img" src="img/case-03.png" alt="">
                             <div class="card-body">
                                 <p class="card-title fz-15 fw-bold"><a class="stretched-link text-decoration-none" href="cases-item.html">Дрова-шоп</a></p>
@@ -107,7 +107,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-5">
-                        <div class="card card-case py-4">
+                        <div class="card card-case py-3 py-lg-4">
                             <img class="card-img" src="img/case-04.png" alt="">
                             <div class="card-body">
                                 <p class="card-title fz-15 fw-bold"><a class="stretched-link text-decoration-none" href="cases-item.html">Дрова-шоп</a></p>
@@ -116,7 +116,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-5">
-                        <div class="card card-case py-4">
+                        <div class="card card-case py-3 py-lg-4">
                             <img class="card-img" src="img/case-05.png" alt="">
                             <div class="card-body">
                                 <p class="card-title fz-15 fw-bold"><a class="stretched-link text-decoration-none" href="cases-item.html">Дрова-шоп</a></p>
@@ -125,7 +125,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6">
-                        <div class="card card-case py-4">
+                        <div class="card card-case py-3 py-lg-4">
                             <img class="card-img" src="img/case-06.png" alt="">
                             <div class="card-body">
                                 <p class="card-title fz-15 fw-bold"><a class="stretched-link text-decoration-none" href="cases-item.html">Дрова-шоп</a></p>
