--- a/index.html
+++ b/index.html
@@ -238,38 +238,36 @@
         <section class="section py-5 dark-mode bg-color-black color-white">
             <div class="container-fluid">
                 <div class="row justify-content-center">
-                    <div class="col-lg-8 text-center">
-                        <h2 class="h1">Подберите <span class="color-blue">готовый сайт</span></h2>
+                    <div class="col-12 text-center">
+                        <h2 class="h1 mb-5">Подберите <span class="color-blue">готовый сайт</span></h2>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="swiper portfolioSwiper mt-5">
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide">
-                                <a href="shop-item.html">
-                                    <img class="w-100 mx-auto" src="img/portfolio-01.png" alt="">
-                                </a>
-                            </div>
-                            <div class="swiper-slide">
-                                <a href="shop-item.html">
-                                    <img class="w-100 mx-auto" src="img/portfolio-01.png" alt="">
-                                </a>
-                            </div>
-                            <div class="swiper-slide">
-                                <a href="shop-item.html">
-                                    <img class="w-100 mx-auto" src="img/portfolio-01.png" alt="">
-                                </a>
-                            </div>
-                            <div class="swiper-slide">
-                                <a href="shop-item.html">
-                                    <img class="w-100 mx-auto" src="img/portfolio-01.png" alt="">
-                                </a>
-                            </div>
+                <div class="swiper portfolioSwiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <a href="shop-item.html">
+                                <img class="w-100 mx-auto" src="img/portfolio-01.png" alt="">
+                            </a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="shop-item.html">
+                                <img class="w-100 mx-auto" src="img/portfolio-01.png" alt="">
+                            </a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="shop-item.html">
+                                <img class="w-100 mx-auto" src="img/portfolio-01.png" alt="">
+                            </a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="shop-item.html">
+                                <img class="w-100 mx-auto" src="img/portfolio-01.png" alt="">
+                            </a>
                         </div>
                     </div>
                 </div>
                 <div class="row justify-content-center mt-5">
-                    <div class="col text-center">
+                    <div class="col-12 text-center">
                         <a class="link-blue text-decoration-none fz-12 fw-bold" href="#">Посмотреть более 2200 шаблонов</a>
                     </div>
                 </div>
@@ -281,11 +279,11 @@
             style="background-image: url(img/bg-price.png);">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col text-center">
-                        <h2 class="h1">Цены на создание <span class="color-blue">сайтов под ключ</span></h2>
+                    <div class="col-12 text-center">
+                        <h2 class="h1 mb-5">Цены на создание <span class="color-blue">сайтов под ключ</span></h2>
                     </div>
                 </div>
-                <div class="row g-4 mt-3">
+                <div class="row g-4">
                     <div class="col-lg-4">
                         <div class="card card-pricing h-100">
                             <div class="card-body pb-0">
@@ -390,11 +388,11 @@
         <section class="section py-5 dark-mode bg-color-black color-white">
             <div class="container-fluid">
                 <div class="row justify-content-center">
-                    <div class="col text-center">
-                        <h2 class="h1">Как <span class="color-blue">изменились</span> наши клиенты</h2>
+                    <div class="col-12 text-center">
+                        <h2 class="h1 mb-5">Как <span class="color-blue">изменились</span> наши клиенты</h2>
                     </div>
                 </div>
-                <div class="row mt-5 pt-4 pb-2 justify-content-between">
+                <div class="row justify-content-between">
                     <div class="col-6 text-center">
                         <p class="fz-2">До</p>
                     </div>
