--- a/policy.html
+++ b/policy.html
@@ -79,9 +79,9 @@
             <div class="container">
                 <h1 class="text-uppercase fw-bold mb-5">Политика обработки персональных данных</h1>
                     <p>1. Принимая условия настоящего Соглашения, Пользователь даёт своё согласие Администрации сайта
-                        https://startsite.studio (далее — Администрация) на сбор, хранение и обработку своих
+                        <a href="index.html">https://startsite.studio</a> (далее — Администрация) на сбор, хранение и обработку своих
                         персональных
-                        данных, указанных путём заполнения веб-форм на сайте https://startsite.studio (далее — Сайт).
+                        данных, указанных путём заполнения веб-форм на сайте <a href="index.html">https://startsite.studio</a> (далее — Сайт).
                         Под
                         персональными данными понимается любая информация, относящаяся к прямо или косвенно
                         определённому или определяемому физическому лицу (гражданину).</p>
@@ -99,7 +99,7 @@
                     <p>6. Персональные данные хранятся и обрабатываются до завершения всех необходимых процедур либо до
                         ликвидации Сайта.</p>
                     <p>7. Согласие может быть отозвано Пользователем или его представителем путём направления
-                        письменного заявления на Сайт по электронному адресу support@startsite.studio</p>
+                        письменного заявления на Сайт по электронному адресу <a href="mailto:support@startsite.studio">support@startsite.studio</a></p>
                     <p>8. Пользователь принимает политику использования файлов cookies, используемую на Сайте, и даёт
                         согласие на получение информации об IP-адресе и иных сведений о его активности на Сайте. Данная
                         информация не используется для установления личности Пользователя.</p>
