--- a/shop.html
+++ b/shop.html
@@ -75,11 +75,11 @@
             </div>
         </section>
 
-        <section class="section py-5 dark-mode bg-color-black color-white">
+        <section class="section py-5">
             <div class="container">
                 <p class="fz-15 fw-light mb-0">Для своего бизнеса</p>
                 <h1 class="text-uppercase fw-bold mb-5">Выбери готовый сайт</h1>
-                <div class="row g-4">
+                <!-- <div class="row g-4">
                     <div class="col-lg-4">
                         123
                     </div>
@@ -94,13 +94,195 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6">
-                                <div class="card card-case">
-                                    <img class="card-img" src="img/case-02.png" alt="">
-                                    <div class="card-body">
-                                        <p class="card-title fz-15 fw-bold"><a class="stretched-link" href="shop-item.html">Дрова-шоп</a></p>
-                                        <p class="card-text">The best credit cards offer some tantalizing combinations of promotions and prizes</p>
-                                    </div>
+                        </div>
+                    </div>
+                </div> -->
+                <div class="row g-4">
+                    <div class="col-md-6 col-lg-4">
+                        <div class="card card-shop-item shadow mt-4">
+                            <a href="shop-item.html">
+                                <img class="card-img" src="img/shop-item-01.png" alt="">
+                            </a>
+                            <div class="card-body">
+                                <p class="small mb-0">WordPress</p>
+                                <p class="fz-15">Интернет-магазин мебели</p>
+                                <div class="d-flex justify-content-between py-3">
+                                    <p class="small">№123456</p>
+                                    <p class="small">6900 руб.</p>
+                                </div>
+                            </div>
+                            <div class="card-footer">
+                                <div class="d-flex justify-content-between">
+                                    <a class="btn btn-primary" href="shop-item.html">Подробнее</a>
+                                    <a class="btn btn-secondary" href="#">Демо</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="card card-shop-item shadow mt-4">
+                            <a href="shop-item.html">
+                                <img class="card-img" src="img/shop-item-02.png" alt="">
+                            </a>
+                            <div class="card-body">
+                                <p class="small mb-0">WordPress</p>
+                                <p class="fz-15">Интернет-магазин мебели</p>
+                                <div class="d-flex justify-content-between py-3">
+                                    <p class="small">№123456</p>
+                                    <p class="small">6900 руб.</p>
+                                </div>
+                            </div>
+                            <div class="card-footer">
+                                <div class="d-flex justify-content-between">
+                                    <a class="btn btn-primary" href="shop-item.html">Подробнее</a>
+                                    <a class="btn btn-secondary" href="#">Демо</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="card card-shop-item shadow mt-4">
+                            <a href="shop-item.html">
+                                <img class="card-img" src="img/shop-item-02.png" alt="">
+                            </a>
+                            <div class="card-body">
+                                <p class="small mb-0">WordPress</p>
+                                <p class="fz-15">Интернет-магазин мебели</p>
+                                <div class="d-flex justify-content-between py-3">
+                                    <p class="small">№123456</p>
+                                    <p class="small">6900 руб.</p>
+                                </div>
+                            </div>
+                            <div class="card-footer">
+                                <div class="d-flex justify-content-between">
+                                    <a class="btn btn-primary" href="shop-item.html">Подробнее</a>
+                                    <a class="btn btn-secondary" href="#">Демо</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="card card-shop-item shadow mt-4">
+                            <a href="shop-item.html">
+                                <img class="card-img" src="img/shop-item-01.png" alt="">
+                            </a>
+                            <div class="card-body">
+                                <p class="small mb-0">WordPress</p>
+                                <p class="fz-15">Интернет-магазин мебели</p>
+                                <div class="d-flex justify-content-between py-3">
+                                    <p class="small">№123456</p>
+                                    <p class="small">6900 руб.</p>
+                                </div>
+                            </div>
+                            <div class="card-footer">
+                                <div class="d-flex justify-content-between">
+                                    <a class="btn btn-primary" href="shop-item.html">Подробнее</a>
+                                    <a class="btn btn-secondary" href="#">Демо</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="card card-shop-item shadow mt-4">
+                            <a href="shop-item.html">
+                                <img class="card-img" src="img/shop-item-01.png" alt="">
+                            </a>
+                            <div class="card-body">
+                                <p class="small mb-0">WordPress</p>
+                                <p class="fz-15">Интернет-магазин мебели</p>
+                                <div class="d-flex justify-content-between py-3">
+                                    <p class="small">№123456</p>
+                                    <p class="small">6900 руб.</p>
+                                </div>
+                            </div>
+                            <div class="card-footer">
+                                <div class="d-flex justify-content-between">
+                                    <a class="btn btn-primary" href="shop-item.html">Подробнее</a>
+                                    <a class="btn btn-secondary" href="#">Демо</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="card card-shop-item shadow mt-4">
+                            <a href="shop-item.html">
+                                <img class="card-img" src="img/shop-item-02.png" alt="">
+                            </a>
+                            <div class="card-body">
+                                <p class="small mb-0">WordPress</p>
+                                <p class="fz-15">Интернет-магазин мебели</p>
+                                <div class="d-flex justify-content-between py-3">
+                                    <p class="small">№123456</p>
+                                    <p class="small">6900 руб.</p>
+                                </div>
+                            </div>
+                            <div class="card-footer">
+                                <div class="d-flex justify-content-between">
+                                    <a class="btn btn-primary" href="shop-item.html">Подробнее</a>
+                                    <a class="btn btn-secondary" href="#">Демо</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="card card-shop-item shadow mt-4">
+                            <a href="shop-item.html">
+                                <img class="card-img" src="img/shop-item-02.png" alt="">
+                            </a>
+                            <div class="card-body">
+                                <p class="small mb-0">WordPress</p>
+                                <p class="fz-15">Интернет-магазин мебели</p>
+                                <div class="d-flex justify-content-between py-3">
+                                    <p class="small">№123456</p>
+                                    <p class="small">6900 руб.</p>
+                                </div>
+                            </div>
+                            <div class="card-footer">
+                                <div class="d-flex justify-content-between">
+                                    <a class="btn btn-primary" href="shop-item.html">Подробнее</a>
+                                    <a class="btn btn-secondary" href="#">Демо</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="card card-shop-item shadow mt-4">
+                            <a href="shop-item.html">
+                                <img class="card-img" src="img/shop-item-01.png" alt="">
+                            </a>
+                            <div class="card-body">
+                                <p class="small mb-0">WordPress</p>
+                                <p class="fz-15">Интернет-магазин мебели</p>
+                                <div class="d-flex justify-content-between py-3">
+                                    <p class="small">№123456</p>
+                                    <p class="small">6900 руб.</p>
+                                </div>
+                            </div>
+                            <div class="card-footer">
+                                <div class="d-flex justify-content-between">
+                                    <a class="btn btn-primary" href="shop-item.html">Подробнее</a>
+                                    <a class="btn btn-secondary" href="#">Демо</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="card card-shop-item shadow mt-4">
+                            <a href="shop-item.html">
+                                <img class="card-img" src="img/shop-item-01.png" alt="">
+                            </a>
+                            <div class="card-body">
+                                <p class="small mb-0">WordPress</p>
+                                <p class="fz-15">Интернет-магазин мебели</p>
+                                <div class="d-flex justify-content-between py-3">
+                                    <p class="small">№123456</p>
+                                    <p class="small">6900 руб.</p>
+                                </div>
+                            </div>
+                            <div class="card-footer">
+                                <div class="d-flex justify-content-between">
+                                    <a class="btn btn-primary" href="shop-item.html">Подробнее</a>
+                                    <a class="btn btn-secondary" href="#">Демо</a>
                                 </div>
                             </div>
                         </div>
